--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,11 @@
 version: "3"
 services:
   web:
-    image: jzakilla/bookfinderpy
+    # image: jzakilla/bookfinderpy
+    build: .
     command: nginx -g "daemon off;"
+    environment:
+      - DEBUG=True
     container_name: webapp
     ports:
       - 80:80
